fix hidden language select overflow issue

--- a/web/src/components/layout/nav.css
+++ b/web/src/components/layout/nav.css
@@ -15,7 +15,6 @@ header {
         box-shadow var(--transition-duration) linear;
     padding: var(--page-margin);
     background: var(--white);
-    overflow-x: hidden;
 
     @media (--md-up) {
         position: relative;
